add Thirst Project

--- a/LearningHTML/19_GradienteLinear.html
+++ b/LearningHTML/19_GradienteLinear.html
@@ -9,6 +9,12 @@
         <meta name="keywords" content="html5, technology">
 
         <style>
+            html, body{
+                height: 100%;
+            }
+            body{
+                background-image: linear-gradient( to right top, rgb(255, 255, 255), rgb(68, 116, 131), rgba(0, 0, 0, 0.4));
+            }
             #Effect{
                 background-color: orange;
                 width: 200px;
