--- a/LearningHTML/05_Images.html
+++ b/LearningHTML/05_Images.html
@@ -14,7 +14,7 @@
                 font-family: sans-serif;
                 width: 700px;
                 margin: auto;
-                background-image: url(CursoImages/bg.jpg);
+                background-image: url(../CursoImages/bg.jpg);
                 background-attachment: fixed;
                 background-size:cover;
                 background-position: right bottom;
