--- a/LearningHTML/26_transform.html
+++ b/LearningHTML/26_transform.html
@@ -9,10 +9,126 @@
         <meta name="keywords" content="html5, technology">
     
         <style>
+            .body{
+                height: 100%;
+                margin: 0;
+                padding: 0;
+            }
+            .div1{
+                width: 150px;
+                height: 50px;
+                background: red;
+                transform: translate(50px 50px);
+            }
 
+            .div2{
+                width: 150px;
+                height: 50px;
+                background: blue;
+                position: relative;
+                left: 50%;
+            }
+
+            .div3{
+                width: 50%;
+                overflow: hidden;
+                border: solid 2px black;
+            }
+            .div3-interna{
+                background: yellow;
+                transform: translateX(100%);
+            }
+
+            .div4{
+                width: 50%;
+                overflow: hidden;
+                border: solid 2px black;
+            }
+            .div4-interna{
+                background: yellow;
+                transform: rotate(90deg);
+            }
+
+            .div5{
+                width: 50%;
+                overflow: hidden;
+                border: solid 2px black;
+            }
+            .div5-interna{
+                background: yellow;
+                transform: rotate(-90deg);
+                transform-origin: left top;
+            }
+
+            .div6{
+                width: 50%;
+                overflow: hidden;
+                border: solid 2px black;
+            }
+            .div6-interna{
+                background: yellow;
+                transform: rotate(30deg) translate(50px);
+            }
+
+            .div7{
+                width: 50%;
+                overflow: hidden;
+                border: solid 2px black;
+            }
+            .div7-interna{
+                background: yellow;
+                transform: translate(50px) rotate(30deg);
+            }
+
+            .div8{
+                width: 100px;
+                height: 100px;
+                background: orange;
+                transform: skewX(10deg) skewY(10deg);
+            }
+
+            .div9{
+                width: 100px;
+                height: 100px;
+                background: orange;
+                transform: scale(.5) translateX(50%);
+                transition: transform .5s;
+            }
+            .div9:hover{
+                transform: scale(2);
+            }
         </style>
     </Head>
     <body>
-
+        <div class="div1">div1</div>
+        <div class="div2">div2</div>
+        <hr>
+        <div class="div3">
+            <div class="div3-interna">Conteudo Random</div>
+            <p>orem ipsum dolor sit amet, consectetur adipiscing elit. Praesent risus erat, placerat ut diam a, rutrum suscipit enim. Donec nulla nibh, consequat a ex a, laoreet auctor augue. In tristique, elit eget dignissim feugiat, tortor enim auctor enim, vel porta lorem est a mi.</p>
+        </div>
+        <hr>
+        <div class="div4">
+            <div class="div4-interna">Conteudo Random</div>
+            <p>orem ipsum dolor sit amet, consectetur adipiscing elit. Praesent risus erat, placerat ut diam a, rutrum suscipit enim. Donec nulla nibh, consequat a ex a, laoreet auctor augue. In tristique, elit eget dignissim feugiat, tortor enim auctor enim, vel porta lorem est a mi.</p>
+        </div>
+        <hr>
+        <div class="div5">
+            <div class="div5-interna">Conteudo Random</div>
+            <p>orem ipsum dolor sit amet, consectetur adipiscing elit. Praesent risus erat, placerat ut diam a, rutrum suscipit enim. Donec nulla nibh, consequat a ex a, laoreet auctor augue. In tristique, elit eget dignissim feugiat, tortor enim auctor enim, vel porta lorem est a mi.</p>
+        </div>
+        <hr>
+        <div class="div6">
+            <div class="div6-interna">Conteudo Random</div>
+            <p>orem ipsum dolor sit amet, consectetur adipiscing elit. Praesent risus erat, placerat ut diam a, rutrum suscipit enim. Donec nulla nibh, consequat a ex a, laoreet auctor augue. In tristique, elit eget dignissim feugiat, tortor enim auctor enim, vel porta lorem est a mi.</p>
+        </div>
+        <hr>
+        <div class="div7">
+            <div class="div7-interna">Conteudo Random</div>
+                <p>orem ipsum dolor sit amet, consectetur adipiscing elit. Praesent risus erat, placerat ut diam a, rutrum suscipit enim. Donec nulla nibh, consequat a ex a, laoreet auctor augue. In tristique, elit eget dignissim feugiat, tortor enim auctor enim, vel porta lorem est a mi.</p>
+        </div>
+        <hr>
+        <div class="div8"></div>
+        <div class="div9"></div>
     </body>
 </html>
